[gd_scene load_steps=13 format=2]

[ext_resource path="res://player/platform-controller.gd" type="Script" id=1]
[ext_resource path="res://player/player_base_sprite.png" type="Texture" id=2]
[ext_resource path="res://player/player-state-machine/player-state-machine.gd" type="Script" id=3]
[ext_resource path="res://player/player-state-machine/player-states/player-idle-state.gd" type="Script" id=4]
[ext_resource path="res://player/player-state-machine/player-states/player-jump-state.gd" type="Script" id=5]
[ext_resource path="res://player/player-state-machine/player-states/player-move-state.gd" type="Script" id=6]
[ext_resource path="res://player/player-state-machine/state-label.gd" type="Script" id=7]
[ext_resource path="res://player/player-state-machine/player-states/player-fall-state.gd" type="Script" id=8]
[ext_resource path="res://player/player-cam/player-cam.gd" type="Script" id=9]
[ext_resource path="res://player/player-state-machine/player-states/player-land-state.gd" type="Script" id=10]
[ext_resource path="res://player/player-state-machine/player-states/player-dash-state.gd" type="Script" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 6.0

[node name="PlatformController" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StateTimers" type="Node" parent="."]

[node name="JumpBuffer" type="Timer" parent="StateTimers"]
wait_time = 0.2
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="StateTimers"]
wait_time = 0.1
one_shot = true

[node name="FallTimer" type="Timer" parent="StateTimers"]
wait_time = 0.3
one_shot = true

[node name="DashCooldown" type="Timer" parent="StateTimers"]
wait_time = 0.6
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Land" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="StateLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = -16.0
margin_top = -22.0
margin_right = 29.0
margin_bottom = 5.0
text = "STATE"
script = ExtResource( 7 )
